# tailsitter-karamen

./: .gitignore  README.md  build_notebook.py  build_notebook_phase2.py  build_notebook_phase3.py  pyproject.toml
config/: tailsitter.yaml
notebooks/: phase1_walkthrough.ipynb  phase2_walkthrough.ipynb  phase3_walkthrough.ipynb
tailsitter/: __init__.py  config.py
tailsitter/control/: __init__.py  closedloop.py  indi.py
tailsitter/dynamics/: __init__.py  phi_theory.py  sim6dof.py
tailsitter/flatness/: __init__.py  transform.py
tailsitter/trajgen/: __init__.py  feasibility.py  maneuvers.py  minsnap.py  timeopt.py
tailsitter/utils/: __init__.py  rotation.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py
