[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tailsitter-aero"
version = "0.1.0"
description = "Replication of Tal-Ryou-Karaman tailsitter aerobatic trajectory generation"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "pyyaml", "matplotlib"]

[tool.setuptools.packages.find]
include = ["tailsitter*"]
